--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ debugpy==1.6.7
 decorator==5.1.1
 docker==6.1.2
 dominate==2.8.0
+exceptiongroup==1.1.1
 executing==1.2.0
 fastjsonschema==2.17.1
 Flask==2.3.2
@@ -28,6 +29,7 @@ Flask-WTF==1.1.1
 fonttools==4.40.0
 greenlet==2.0.2
 idna==3.4
+iniconfig==2.0.0
 ipykernel==6.23.1
 ipython==8.14.0
 ipython-genutils==0.2.0
@@ -59,6 +61,7 @@ Pillow==9.5.0
 platformdirs==3.5.1
 plotly==5.15.0
 plotly-express==0.4.1
+pluggy==1.2.0
 portalocker==2.7.0
 prompt-toolkit==3.0.38
 psutil==5.9.5
@@ -70,6 +73,7 @@ Pygments==2.15.1
 PyJWT==2.7.0
 pyparsing==3.1.0
 pyrsistent==0.19.3
+pytest==7.4.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
@@ -85,6 +89,7 @@ stack-data==0.6.2
 statsmodels==0.14.0
 tenacity==8.2.2
 threadpoolctl==3.1.0
+tomli==2.0.1
 tornado==6.3.2
 traitlets==5.9.0
 typing_extensions==4.6.2
