--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,6 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - script: |
-        pip install pytest
+        pip install -r requirements.txt
         pytest
       displayName: Run Test
